# RunAsTrustedInstaller

./: CMakeLists.txt  LICENSE  README.md  RunAsTI.cpp  RunAsTI.rc  RunAsTI.sln  RunAsTI.vcxproj  Utils.cpp  Utils.h  resource.h
.github/workflows/: cmake.yml  msbuild.yml
ShellExtension/: Resource.h  RunAsTIShell.cpp  RunAsTIShell.h  RunAsTIShellExtension.cpp  RunAsTIShellExtension.def  RunAsTIShellExtension.idl  RunAsTIShellExtension.rc  RunAsTIShellExtension.rgs  RunAsTIShellExtension.vcxproj  dlldata.c  dllmain.cpp  dllmain.h
